--- a/_posts/2017-04-18-new-file-of-mine.html
+++ b/_posts/2017-04-18-new-file-of-mine.html
@@ -7,13 +7,16 @@ categories: jekyll update
 <p>досить цікава штука сама-по-собі.</p>
 <p>як бач тобі відразу дають хостінг (не розумію якої якості, але...)</p>
 
-<ul>позитиви</ul>
+<h2>позитиви</h2>
+<ul>
 <li>перший</li>
 <li>другий</li>
 <li>третій</li>
-
-<ul>негативи</ul>
+</ul>
+<h2>негативи</h2>
+<ul>
 <li>треба бути трохи програмісторм (дуже трохи, але стартувати буде тяжко)</li>
-
+</ul>
+<br/>
 <p>як запиляти фоцку? ща попробуєм...</p>
-<img src="leo.jpg"/>
+<img src="{{ site.url }}/assets/leo.jpg"/>
